<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="Button_1">Поиск</string>
    <string name="Button_2">Медиатека</string>
    <string name="Button_3">Настройки</string>
    <string name="TextSettings">Настройки</string>
    <string name="TextSettingsButton1">Настройки</string>
    <string name="TextSettingsButton2">Темная тема</string>
    <string name="TextSettingsButton3">Поделиться приложением</string>
    <string name="TextSettingsButton4">Написать в поддержку</string>
    <string name="TextSettingsButton5">Пользовательское соглашение</string>
    <string name="RecommendYP">Курс по Android-разработке https://practicum.yandex.ru/android-developer/</string>
    <string name="MailUser">maxm.v@mail.ru</string>
    <string name="TextSendToSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="ThxtoDev">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="SearchText">Поиск</string>
    <string name="URLYPLegal">https://yandex.ru/legal/practicum_offer</string>
    <string name="ShareTitle">Поделиться приложением через:</string>
    <string name="mailTo">mailto:</string>
    <string name="artist">bee</string>
    <string name="timetrack">3.04</string>
    <string name="trackName">Ели мясо мужики</string>
    <string name="noSearch">Ничего не нашлось</string>
    <string name="errorInternet">Проблемы со связью</string>
    <string name="errorDownload">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="longTime">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="style">Жанр</string>
    <string name="country">Страна</string>

</resources>
