<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:layout_gravity="start"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_large"

        >
        <ImageButton
            style="@style/ImageButtonSettingsBackArrow"
            android:id="@+id/arrowBack"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextSettings"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text_medium"
            android:layout_marginStart="@dimen/zero"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ButtonDesk"
        >
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/TextSettingsButton2"
            />
        <ImageButton
            style="@style/ImageButtonSetting"
            android:id="@+id/switchS"
            android:src="@drawable/resource_switch" />
    </LinearLayout>
    <LinearLayout
        style="@style/ButtonDesk"
        >
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/TextSettingsButton3"
            />
        <ImageButton
            style="@style/ImageButtonSetting"
            android:id="@+id/share"
            android:src="@drawable/share"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ButtonDesk"
        >
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/TextSettingsButton4"
            />
        <ImageButton
            style="@style/ImageButtonSetting"
            android:id="@+id/support"
            android:src="@drawable/support"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/ButtonDesk"
        >
        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/TextSettingsButton5"
            />
        <ImageButton
            android:background="@null"
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/arrowf"
            android:padding="@dimen/padding_small"
            app:tint="@color/Grey"
            android:layout_marginEnd="@dimen/zero"/>
    </LinearLayout>
</LinearLayout>