<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium"
    android:layout_gravity="start"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="@dimen/margin_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"
        />
    <Button
        android:id="@+id/find"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:icon="@drawable/magnifier"
        app:iconGravity="textStart"
        app:iconTint="@color/black"

        android:drawablePadding="@dimen/padding_small"
        android:text="@string/Button_1"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/radius_b"

        />

    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:drawablePadding="@dimen/padding_small"
        android:text="@string/Button_2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"
        app:cornerRadius="@dimen/radius_b"
        app:icon="@drawable/note"
        app:iconGravity="textStart"
        app:iconTint="@color/black"

        />

    <Button
        android:id="@+id/sett"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawablePadding="@dimen/padding_small"
        android:text="@string/Button_3"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/radius_b"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        />
</LinearLayout>