<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"

     >

        <ImageButton
            android:background="@null"
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:scaleType="center"
            android:src="@drawable/arrowbig"

            android:padding="16dp"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/TextSettings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="0dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextSettingsButton2"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="0dp"
            />
        <ImageButton
            android:background="@null"
            android:id="@+id/switchS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/resource_switch"
            android:padding="8dp"
            app:tint="@color/black"
            android:layout_marginEnd="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextSettingsButton3"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="0dp"
            />
        <ImageButton
            android:background="@null"
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/share"
            android:padding="8dp"
            app:tint="@color/black"
            android:layout_marginEnd="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextSettingsButton4"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="0dp"
            />
        <ImageButton
            android:background="@null"
            android:id="@+id/support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/support"
            android:padding="8dp"
            app:tint="@color/black"
            android:layout_marginEnd="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextSettingsButton5"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="0dp"
            />
        <ImageButton
            android:background="@null"
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/arrowf"
            android:padding="8dp"
            app:tint="@color/black"
            android:layout_marginEnd="0dp"/>
    </LinearLayout>
</LinearLayout>