<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/elementFind"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/padding30"
    android:paddingVertical="@dimen/padding10"
    style="@style/ButtonDesk"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    >
    <ImageView
        android:id="@+id/icon_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin13"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"

        android:src="@drawable/placeholder"/>
    <LinearLayout
        android:layout_width="@dimen/margin0"
        android:layout_height="wrap_content"
        android:layout_weight="1"
       android:layout_marginStart="@dimen/margin_small"
        android:orientation="vertical">
<TextView
    android:id="@+id/trackname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ellipsize="end"
    android:maxLines="1"
    android:textColor="?attr/colorSecondaryVariant"

    android:textColorHint="?attr/colorOnPrimary"
    android:text="@string/trackName"
    android:gravity="bottom"
    android:textSize="@dimen/text_medium19"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/artistname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
         android:layout_gravity="center"
            android:ellipsize="end"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text13"
            android:text="@string/artist"
            />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:src="@drawable/dote">

</ImageView>
        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text13"
            android:text="@string/timetrack"
            />
    </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/ImageButtonSetting"
        android:layout_marginEnd="@dimen/margin_medium12"

        android:src="@drawable/arrowf"/>
</LinearLayout>