<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small4"
    android:background="?attr/colorOnSecondary"
    android:layout_gravity="start"
    tools:context=".FindActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageButton
            style="@style/ImageButtonSettingsBackArrow"
            android:id="@+id/arrowBack"
             />

        <TextView
            style="@style/TextTitle"
            android:text="@string/Button_1"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text_medium"
            android:layout_margin="10dp"
            android:layout_marginLeft="@dimen/margin_medium12"
            android:layout_marginTop="@dimen/margin_medium12"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="16dp"
        android:background="@drawable/b_g_search"
        android:padding="@dimen/padding8.5">


        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/margin4"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/magnifier" />


        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginStart="@dimen/margin32"
            android:background="@android:color/transparent"
            android:hint="@string/SearchText"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding40"
            android:textColor="?attr/colorSecondaryContainer"
            android:textColorHint="?attr/colorOnPrimary"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text_small" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/size14"
            android:layout_height="@dimen/size14"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/margin_small"
            android:src="@drawable/cross12x12"
            android:visibility="gone" />
    </FrameLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/historyTitle"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Вы искали"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="8"
        tools:listitem="@layout/recycler_view_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="8"
        android:visibility="gone"
        tools:listitem="@layout/recycler_view_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:visibility="gone"
        android:fontFamily="@font/ys_display_medium"
        android:text="Очистить историю"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorSecondaryVariant"
        app:cornerRadius="54dp"
        android:textSize="@dimen/text14"
        />

    <LinearLayout
        android:id="@+id/notSearch"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/not_search"
            android:layout_width="120dp"
            android:layout_height="120dp"/>
        <TextView
            android:text="@string/noSearch"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text19"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/errorInternet"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/not_internet"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:text="@string/errorInternet"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text19"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/errorDownload"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="@dimen/text19"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondaryVariant"
            android:layout_marginTop="16dp"
            app:cornerRadius="54dp"
            android:textSize="@dimen/text14"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            />

    </LinearLayout>
</LinearLayout>
</LinearLayout>
